clean library package